[package]
name = "moo_firewall"
version = "0.2.1"
edition = "2024"
license = "MIT"

[dependencies]
clap = "4.6"
color-eyre = { version = "0.6", features = ["color-spantrace"] }
serde = { version = "1.0", features = ["derive"] }
simplelog = "0.12"
toml = "1.1"
windows-wfp = "0.2"
log = "0.4"

[profile.release]
strip = true
opt-level = 3
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false